# Cenisys

./: .gitlab-ci.yml  README.rst
boost/fiber/: yield.hpp
boost/fiber/algo/: asio.hpp
boost/fiber/asio/: use_future.hpp  yield.hpp
boost/utility/: string_ref.hpp
doc/: conf.py.in  index.rst
include/: CMakeLists.txt  servermanager.h
include/block/: air.h  block.h  blockref.h
include/cenisys/server/: servermanager.h
include/config/: configparser.h
include/server/: server.h  servermanager.h
include/world/: chunk.h
src/: CMakeLists.txt  main.cpp  servermanager.cpp
src/block/: air.cpp  block.cpp  blockref.cpp
src/server/: server.cpp  servermanager.cpp
src/world/: chunk.cpp
test/: CMakeLists.txt  config.cpp
